public class WeatherGovService implements WeatherService {
    public WeatherData getWeather() {
        // Implementation to retrieve weather data from the Weather Gov service
        // Replace this with the actual implementation to fetch weather data
        WeatherData weatherData = new WeatherData();
        // Set the weather data properties (temperature, humidity, pressure, wind speed)

        // Demonstrative weather data
        weatherData.setTemperature(22.3);
        weatherData.setHumidity(68.5);
        weatherData.setPressure(1012.8);
        weatherData.setWindSpeed(9.8);
        return weatherData;
    }
}