public interface WeatherObserver {
    void notify(WeatherData weatherData);
}